# dbpedia-vad

./: .gitignore  AUTHORS  LICENSE.md  Makefile.am  NEWS.md  README.md  build.sh  configure.ac  dbpedia_sticker.xml  gen_version.sh
sql/: dbpedia_init.sql  description.sql
www/: description.vsp
